minio/ingress.yml
# Source: minio/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: "db"
  labels:
    app: minio
    chart: minio-3.4.7
    release: minio
    heritage: Helm
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
      host: "s3.lan.repe.re"

---
# Source: minio/templates/console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: "db"
  labels:
    app: minio
    chart: minio-3.4.7
    release: minio
    heritage: Helm
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-console
                port:
                  number: 9001
      host: "minio.lan.repe.re"
